force-app/chapter00/default/objects/Asset_Residency__c/Asset_Residency__c.object-meta.xml
<CustomObject>
    <description>An sObject to track where an asset was located and for how long.</description>
    <label>Asset Residency</label>
    <nameField>
        <displayFormat>ARN-{00000}</displayFormat>
        <label>Asset Residency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Residencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>