force-app/chapter00/default/objects/Asset_Residency__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date that the residency of the asset at the resident account ended.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>