force-app/chapter00/default/objects/Asset_Residency__c/fields/Resident_Account__c.field-meta.xml
<CustomField>
    <fullName>Resident_Account__c</fullName>
    <description>The account that the asset is residing at.</description>
    <label>Resident Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Residencies</relationshipLabel>
    <relationshipName>Asset_Residencies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>