force-app/chapter00/default/objects/Asset_Residency__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date that the asset began its residency at the resident account.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>